# anki-cli

./: .gitattributes  AGENTS.md  Cargo.toml  README.md  install.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml  update-anki.yml
docs/: development.md
scripts/: release.sh  update-anki.sh
src/: col.rs  config.rs  main.rs  mcp.rs  notes.rs  sync.rs
tests/: e2e_ankiweb.rs  local.rs
