[package]
name = "anki-cli"
version = "0.3.0"
edition = "2021"
description = "Git-like CLI for Anki collections with AnkiWeb sync"
license = "AGPL-3.0-or-later"

[dependencies]
anki = { git = "https://github.com/ankitects/anki", rev = "f13c15aef0c94f73f6101a030f1b69772f7f3e8c", features = ["rustls"] }
anki_proto = { git = "https://github.com/ankitects/anki", rev = "f13c15aef0c94f73f6101a030f1b69772f7f3e8c" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
